[package]
name = "vault"
version = "0.1.1"
edition = "2021"
authors = [
    "Shubham singh		<github: github.com/shubhexists>",
    "Sahaj      <github: github.com/itsDrac>"
    ]
about = "A simplified version control system built in Rust for local files, quite similar to how git functions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-1 = "0.10.1"
whoami = "1.4.1"